# py_web_module_10_hw2

./: .gitignore  README.md  pyproject.toml
my_django_hw10/: manage.py
my_django_hw10/hw10_quotes/: asgi.py  settings.py  urls.py  wsgi.py
my_django_hw10/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
my_django_hw10/quotes/migrations/: 0001_initial.py
my_django_hw10/quotes/static/quotes/: style.css
my_django_hw10/quotes/templates/quotes/: add_quote.html  author.html  base.html  base01.html  index.html  index1.html  index2.html  tag.html
my_django_hw10/utils/: check_connectiondb.py  migrationdb.py
